style: prevent horizontal overflow by hiding overflow-x on html and body

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,7 @@
     --color-myPink1: #E2BBE9;
     --color-myPink2: #E966A0;
 }
+
+html, body {
+  overflow-x: hidden;
+}
